site/public/css/electronic.css
/* ... */
.gradeable .mark-container:last-child {
    border-bottom: none;
}

.gradeable .container.box-title {
    padding-left: 5px;
}

.gradeable .mark-selector {
    width: 20px;
    height: 20px;
    margin: 2px;
    border: 2px solid var(--text-black);
    border-radius: 4px;
    font-size: 14px;
    text-align: center;
}

.gradeable .mark-selector.mark-selected {
    color: var(--text-white);
    background-color: var(--checkbox-black);
}

.gradeable .mark-selector.hidden {
    display: none;
}

.gradeable .reorder-mark-container.hidden {
    visibility: hidden;
}

/* stylelint-disable-next-line no-descending-specificity */
.gradeable .mark-container span {
    display: inline-flex;
    box-sizing: content-box;
    align-items: center;
    justify-content: center;
    cursor: pointer;
}

.gradeable .mark-container span.mark-points {
    width: 80px;
    justify-content: flex-end;
}

.gradeable .mark-container span.mark-title {
    justify-content: flex-start;
}

/* stylelint-disable-next-line no-descending-specificity */
.gradeable .mark-container input,
/* stylelint-disable-next-line no-descending-specificity */
.gradeable .mark-container textarea {
    box-sizing: border-box;
}

.gradeable .mark-container span.mark-title textarea {
    width: 100%;
    resize: none;
    min-height: 20px;
}

.gradeable .mark-container .mark-points input {
    text-align: right;
    width: 100%;
    margin: 2px;
}

.gradeable .mark-container input:disabled {
    background-color: transparent;
    border: none;
}

.gradeable .mark-container.mark-publish {
    background-color: var(--alert-border-blue);
}

/* stylelint-disable-next-line no-descending-specificity */
.gradeable .mark-disabled span {
    cursor: not-allowed;
    opacity: 0.3;
}

.gradeable .mark-deleted {
    background: var(--standard-light-pink);
}

.gradeable .custom-mark-error {
    border-color: var(--standard-vibrant-red);
    background-color: var(--standard-pastel-pink);
}

.gradeable .mark-deleted span.delete-mark-container {
    display: none;
}

.gradeable span.restore-mark-container {
    display: none;
}

.gradeable .mark-deleted span.restore-mark-container {
    display: inherit;
}

.gradeable span.reorder-mark-container {
    min-width: 20px;
    display: inline-flex;
    justify-content: center;
    align-items: center;
}

.gradeable span.mark-tools {
    min-width: 20px;
    width: 20px;
    text-align: right;
    opacity: 1;
}

.gradeable .mark-uneditable {
    cursor: default;
    border: none;
    outline: none;
    background-color: initial;
}

/* stylelint-disable-next-line no-descending-specificity */
.mark-container .col-sm input {
    width: 100%;
    margin: 2px;
}

.gradeable .add-new-mark {
    margin-left: 25px;
}

.gradeable .received-marks-list.container {
    padding-left: 15px;
    padding-top: 0;
}

.gradeable .received-marks-list.container .row .col-no-gutters.point-value,
.gradeable .received-marks-list.container .row .col-no-gutters.indicator {
    display: inline-flex;
    align-items: center;
    padding-left: 5px;
    padding-right: 5px;
    width: 30px;
}

.gradeable .received-marks-list.container .row .col-no-gutters.point-value {
    justify-content: flex-end;
}

.gradeable .received-marks-list.container .row .col-no-gutters.indicator {
    justify-content: center;
}

/* Mark conflict popup */

#mark-conflict-popup div.mark-conflict-row {
    margin-top: 5px;
    margin-bottom: 5px;
}

#mark-conflict-popup .mark-conflict-row span {
    padding: 3px;
    border-width: 2px;
    margin: 0;
    display: inline-flex;
    align-items: center;
}

#mark-conflict-popup .mark-conflict-row .button-container {
    width: 150px;
}

#mark-conflict-popup .mark-conflict-row .button-container input {
    width: 100%;
}

#mark-conflict-popup .mark-conflict-row.mark-resolved,
#mark-conflict-popup .mark-conflict-row.hidden {
    display: none;
}

#mark-conflict-popup .conflict-resolve-progress {
    width: fit-content;
    margin: 0 auto;
}

#mark-conflict-popup .mark-conflict-container {
    margin-top: 25px;
}

/* stylelint-disable-next-line selector-id-pattern, selector-class-pattern */
#discussion_browser.rubric_panel {
    border: 5px solid var(--standard-light-seafoam);
}

/* stylelint-disable-next-line selector-id-pattern */
#directory_view {
    position: relative;
    float: left;
    width: 100%;
    padding-left: 10px;
}

#file-view {
    height: 100%;
    width: 100%;
}

.sticky-file-info {
    position: absolute;
    right: 5px;
    left: 5px;
    background-color: var(--standard-pale-blue-gray);
    padding: 10px 15px 0;
    z-index: 30;
}

#image-rotate-icons-bar,
#notebook-image-rotate-icons-bar {
    display: none;
    padding: 0 10px;
}

#file-content {
    height: 90%;
    width: 100%;
}

#file-zoom-controls {
    display: inline-block;
    margin-left: 24px;
    position: relative;
    bottom: 3px;
}

#file-zoom-controls button {
    box-shadow: none;
    border: none;
    background: none;
}

/* stylelint-disable-next-line selector-id-pattern */
#changeCodeStyle {
    display: inline-block;
}

/* Panels Selector */
.panels-selector-window {
    width: 85%;
    max-width: 85%;
    height: 90%;
}

#panels-selector-modal .form-title {
    border-bottom: none;
    text-align: center;
}

#panels-selector-modal .form-title h1 {
    margin-bottom: 0;
    font-weight: initial;
}

.layout-option {
    margin-bottom: 20px;
}

.layout-option hr {
    margin: 8px 0;
}

.layout-option-cont {
    display: grid;
    grid-template-columns: repeat(auto-fill, 250px);
    max-width: 83vw;
    column-gap: 5px;
    /* stylelint-disable-next-line */
    row-gap: 5px;
}

.layout-option-item {
    height: 220px;
    width: 250px;
    background: var(--subtle-grey-background);
    padding: 5px;
}

/* stylelint-disable-next-line no-descending-specificity */
.layout-option-item button {
    margin-top: 2px;
}

.layout-option-item canvas {
    height: 70%;
    width: 100%;
}
/* ... */

